@@ -45,6 +45,7 @@
 
  Other changes:
 
+   - myDndWindow, ofaNomodalPage: homogeneize debug messages.
    - myIBin: has its own 'my-ibin-changed' signal (todo #1501).
    - mySettings: have an info message instead of debug when file doesn't exist.
    - ofaAccentryStore: becomes a dossier-level singleton.
